# rabbithole

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  run_local.py  schema.sql  seed.csv
.github/workflows/: python-ci.yml  ui-ci.yml
architecture/: 01_fetching.md  02_chunking.md  03_embedding.md  04_retrieval.md  05_serving.md  06_dashboard.md  overview.md
core/: article_fetcher.py  channel_discovery.py  chunker.py  db.py  entities.py  gateway.py  topics.py  vector_store.py
dashboard/: app.py  chat.py
docs/superpowers/plans/: 2026-06-22-entity-metadata-retrieval.md  2026-06-23-adjacent-channel-discovery.md
docs/superpowers/specs/: 2026-06-20-entity-metadata-retrieval-design.md
ingestion/: article_fetch_lambda.py  article_worker.py  discovery_worker.py  fetch_lambda.py  ingest_article.py  worker_lambda.py
migrations/: 001_channel_discovery.sql  002_guest_discovery_queue.sql
retrieval/: main.py
tests/: conftest.py
tests/integration/: conftest.py  test_article_worker.py  test_chat_nonstream.py  test_chat_stream.py  test_health_and_conversations.py  test_worker_process_video.py
tests/quality/: conftest.py  test_rag_quality.py
tests/quality/fixtures/: seed_chunks.example.json
tests/unit/: test_article_fetcher.py  test_channel_discovery.py  test_chunker.py  test_entities.py  test_fetch_helpers.py  test_retrieval_helpers.py  test_topics.py  test_vector_store.py
ui/: eslint.config.js  index.html  package.json  vite.config.ts
ui/src/: index.ts  main.tsx  types.ts
ui/src/components/: ChatInput.test.tsx  ChatInput.tsx  ConversationCard.test.tsx  ConversationCard.tsx  HistoryPanel.tsx  MessageList.tsx  RagChat.test.tsx  RagChat.tsx  SourceCard.tsx
ui/src/hooks/: useConversations.test.ts  useConversations.ts  (+2 more)
(+2 files in other folders)
