[project]
name = "youtube-topic-rag"
version = "0.1.0"
description = "Serverless RAG pipeline over YouTube transcripts — consciousness, alternative history, biohacking, spirituality"
requires-python = ">=3.12"
dependencies = [
    # API framework
    "fastapi>=0.111.0",
    "mangum>=0.17.0",           # ASGI adapter for AWS Lambda
    "uvicorn>=0.29.0",          # local dev server
    # Database
    "psycopg2-binary>=2.9.9",   # PostgreSQL driver (Neon)
    # AI providers
    "openai>=1.35.0",           # embeddings (text-embedding-3-small) + synthesis (gpt-4o-mini)
    "anthropic>=0.28.0",        # chapter generation + topic classification (claude-haiku-4-5-20251001)
    # Vector database
    # Pinecone Serverless SDK
    "pinecone-text>=0.9.0",     # BM25Encoder for sparse vectors (hybrid search)
    # Re-ranking
    "sentence-transformers>=3.1.0",  # cross-encoder/ms-marco-MiniLM-L-6-v2
    # YouTube ingestion
    "youtube-transcript-api>=0.6.2",
    "google-api-python-client>=2.131.0",  # YouTube Data API v3
    # AWS SDK
    "boto3>=1.34.131",
    # Data validation
    "pydantic>=2.7.1",
    # JWT auth for widget identity
    "python-jose[cryptography]>=3.3.0",
    # Developer dashboard
    "streamlit>=1.35.0",
    "pinecone>=9.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",           # FastAPI TestClient dependency
    "python-dotenv>=1.0.0",    # load .env in quality tests + local dev scripts
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not quality'"
markers = [
    "quality: real API calls — requires live env vars (OPENAI_API_KEY, PINECONE_API_KEY, etc.)",
]
